6953267: assert in EA code with -XX:+StressReflectiveCode

Add missing checks into EA code.

Reviewed-by: never